

===== 1.3.14 - Pending App Store Review =====
Jan 26 2014 - Submit date

* Ability to set a custom home page. Revamped settings so that future
  customizations will be easier to implement.

* Add ability for other apps to open links in Onion Browser. Other apps
  can use the "onionbrowser://" (HTTP) or "onionbrowsers://" (HTTPS) URI
  protocols to launch Onion Browser. See README.

* Tweak "Connecting..." info page, based on input from Wong Choon Jie.

* Update default home page.

* OpenSSL updated to 1.0.1f.

* Tor updated to 0.2.4.20.

===== 1.3.13 - In App Store =====
Nov 17, 2013 - Submit date
Nov 20, 2013 - App store availability

* More fixes to iPad "black bar" issue on iOS 7.0.

* Tor updated to 0.2.4.18-rc, which enables TLS 1.1 and 1.2 for improved
  security.



PREVIOUS VERSIONS:

===== 1.3.12  =====
Oct 18, 2013 - Submit date
Oct 23, 2013 - App store availability

* Fix issue when opening app on iPad when in Landscape mode. ("Black bar"
  problem.)

* Fix some possible instances of random crashing introduced in previous
  version.

* Fix issue where bottom of webpage was covered by toolbar at bottom of
  screen.


===== (No version 1.3.11) =====


===== 1.3.10  =====
Oct 11, 2013 - Submit date
Oct 16, 2013 - App store availability

* MAJOR PRIVACY ISSUE FIXED: App previously did not successfully wipe
  HTML5 "application storage" (aka "local storage" or "app cache"), even
  when force-quitting or selecting "New Identity". This could be seen by
  testing a Google Search and noticing previous searches in a dropdown
  (due to Google's use of this cache). (Issue 26)
  https://github.com/mtigas/iOS-OnionBrowser/commit/dffce7070856927a8bb9f92a8fa67523d0e9eb10
  https://github.com/mtigas/iOS-OnionBrowser/commit/7ae6bcb5aa33538159c423a3b6c9987725e46d9a

* Add check.torproject.org frame to homepage, to ensure that user has
  successfully connected to Tor. (See Issue 28)