@@ -13,6 +13,9 @@
 #define COOKIES_BLOCK_THIRDPARTY 1
 #define COOKIES_BLOCK_ALL 2
 
+#define JAVASCRIPT_DISABLED 0
+#define JAVASCRIPT_ENABLED 1
+
 #define UA_SPOOF_NO 0
 #define UA_SPOOF_WIN7_TORBROWSER 1
 #define UA_SPOOF_SAFARI_MAC 2
