@@ -8,7 +8,7 @@ Support:<br><a href="https://mike.tig.as/onionbrowser/help/">https://mike.tig.as
 Version History:<br><a href="https://raw.github.com/mtigas/iOS-OnionBrowser/master/CHANGES.txt">https://raw.github.com/mtigas/iOS-OnionBrowser/master/CHANGES.txt</a></p>
     <p>&copy; 2012-2014 Mike Tigas<br>(<a href="https://mike.tig.as/">https://mike.tig.as/</a> | <a href="http://tigas3l7uusztiqu.onion/">tigas3l7uusztiqu.onion</a>)</p>
     <ul>
-        <li><b>OnionBrowser</b>: 1.3.14 (20140126.1)</li>
+        <li><b>OnionBrowser</b>: 1.3.14 (20140126.2)</li>
         <li><b>Tor</b>: 0.2.4.20 (Dec 23 2013)</li>
         <li><b>libevent</b>: 2.0.21-stable (Nov 18 2012)</li>
         <li><b>OpenSSL</b>: 1.0.1f (Jan 06 2014)</li>
